mobile layout bug correction

--- a/src/scss/modules-core/_sm-layoutBase.scss
+++ b/src/scss/modules-core/_sm-layoutBase.scss
@@ -8,13 +8,14 @@
 html {
   min-height: 100vh;
   width: 100%;
+  max-width: 100vw;
 }
 
 body {
   position: relative;
   min-height: 100%;
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
